overflow expenses / fix creation

--- a/src/app/components/calendar/slideout-menu/slideout-menu.component.scss
+++ b/src/app/components/calendar/slideout-menu/slideout-menu.component.scss
@@ -26,7 +26,8 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-           
+            height: calc(100vh - 110px);
+            overflow-y: auto;
         }
     }
     &__date{
